--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,12 @@
     color: #D1CDC7;
 }
 
+.jumbotron-image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
 body {background-color:#181A1B;}
 h2 {font-family: Arial, Helvetica, sans-serif;
     color: #D1CDC7;
