--- a/static/hurricanes/css/style.css
+++ b/static/hurricanes/css/style.css
@@ -1,13 +1,20 @@
 .jumbotron {
     background-color:#181A1B;
     font-family: Arial, Helvetica, sans-serif;
-    color: chartreuse;
+    color: rgb(255, 0, 170);
 }
 
-/* body {background-color:#181A1B;}
+.jumbotron-image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+body {background-color:#181A1B;}
 h2 {font-family: Arial, Helvetica, sans-serif;
     color: #D1CDC7;
-} */
+} 
 p {font-family: Arial, Helvetica, sans-serif;
     color: #D1CDC7;
 }
