--- a/static/hurricanes/css/styleRace.css
+++ b/static/hurricanes/css/styleRace.css
@@ -1,8 +1,8 @@
 @import "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
-#container {
+#windrace {
     height: 400px;
     min-width: 310px;
-    max-width: 800px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .loading {
@@ -29,7 +29,7 @@
 }
 #play-range {
     margin: 2.5%;
-    width: 70%;
+    width: 80%;
 }
 #play-output {
     font-family:"Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif;
