--- a/Templates/oceanTemps.html
+++ b/Templates/oceanTemps.html
@@ -76,15 +76,9 @@
 
     <div class="row">
       <div class="col-md-12">
-        <p>citations</p>
+        <p>Citation:</p>
         <p>
-          We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
-
-          We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
-
-          That's what makes life fun. That you can make these decisions. That you can create the world that you want. Here's another little happy bush Let's make a happy little mountain now. But they're very easily killed. Clouds are delicate.
-
-          We'll take a little bit of Van Dyke Brown. This is unplanned it really just happens. There's not a thing in the world wrong with washing your brush.		
+          Data: NOAA National Centers for Environmental information, Climate at a Glance: Global Time Series, published October 2020, retrieved on October 24, 2020 from https://www.ncdc.noaa.gov/cag/ - in footer of HTML
         </p>
       </div>
   </div>
