--- a/Templates/oceanTemps.html
+++ b/Templates/oceanTemps.html
@@ -20,12 +20,7 @@
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item active">
-          <a class="nav-link" href="/Group-Project-2/static/index.html">Home <span class="sr-only">(current)</span></a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li> -->
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           More Info
@@ -38,14 +33,7 @@
           <a class="dropdown-item" href="#">API</a>
           </div>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
+
       </div>
       </nav>
     <div class="jumbotron text-center">
@@ -54,31 +42,17 @@
     <div id="bar"></div>
     <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
 
-    <!-- <h2>Carbon in the Atmosphere</h2>    
-    <div id="scatter"></div>
-    <p>The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
-      measurements of CO2 in the atmosphere. They were started by C. David Keeling of the Scripps Institution of Oceanography in March of 1958 at a facility of the National 
-      Oceanic and Atmospheric Administration [Keeling, 1976]. NOAA started its own CO2 measurements in May of 1974, and they have run in parallel with those made by Scripps 
-      since then [Thoning, 1989]. https://www.esrl.noaa.gov/gmd/ccgg/trends/</p>
-    
-    <h2>Hurricane Landfall</h2>
-    <div class="chart-container" style="position: relative; height:40vh; width:97vw">   
-    <canvas id="myChart"></canvas>
-    </div> 
-    <!-- <canvas style="width: 512px; height: 256px"></canvas> -->
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
-      elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
-      Donec felis elit, mollis non enim id, tempus iaculis justo. In a euismod sapien. Nam pellentesque ex et ligula pharetra elementum. Donec pulvinar id nibh non pretium. 
-      Mauris enim justo, vestibulum ut luctus sit amet, egestas a nisl. Praesent nulla nisi, mattis quis tempus ut, rhoncus eu lectus. Aliquam sollicitudin id tellus sit amet sagittis. 
-      Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p> -->
-
-    </div>       -->
-
     <div class="row">
       <div class="col-md-12">
-        <p>Citation:</p>
+        <p>citations</p>
         <p>
-          Data: NOAA National Centers for Environmental information, Climate at a Glance: Global Time Series, published October 2020, retrieved on October 24, 2020 from https://www.ncdc.noaa.gov/cag/ - in footer of HTML
+          We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
+
+          We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
+
+          That's what makes life fun. That you can make these decisions. That you can create the world that you want. Here's another little happy bush Let's make a happy little mountain now. But they're very easily killed. Clouds are delicate.
+
+          We'll take a little bit of Van Dyke Brown. This is unplanned it really just happens. There's not a thing in the world wrong with washing your brush.		
         </p>
       </div>
   </div>
@@ -89,7 +63,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script type="text/javascript" src="../static/js/plot.js"></script>
+  <script type="text/javascript" src="../static/js/ocean.js"></script>
 </body>
 
 </html>
