Updated html files and app.py to include correct routes

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg  navbar-custom" style="background-color: #181A1B;">
-      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="/">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,11 +31,11 @@
           More Info
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="hurricanes.html">Atlantic Storm Events</a>
-          <a class="dropdown-item" href="oceanTemps.html">Ocean Temps</a>
-          <a class="dropdown-item" href="Carbon.html">Carbon Emissions</a>
+          <a class="dropdown-item" href="/hurricanes">Atlantic Storm Events</a>
+          <a class="dropdown-item" href="/oceans">Ocean Temps</a>
+          <a class="dropdown-item" href="/carbon">Carbon Emissions</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">API</a>
+          <a class="dropdown-item" href="/api">API</a>
           </div>
         </li>
         <!-- <li class="nav-item">
