--- a/Templates/hurricanes.html
+++ b/Templates/hurricanes.html
@@ -7,14 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Storm Evolution</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-  <link rel="stylesheet" type="text/css" href="../static/css/styleHurricane.css">
+  <link href="../static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg  navbar-custom" style="background-color: #181A1B;">
-      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="/">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,12 +30,12 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           More Info
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="hurricanes.html">Atlantic Storm Events</a>
-          <a class="dropdown-item" href="oceanTemps.html">Ocean Temps</a>
-          <a class="dropdown-item" href="Carbon.html">Carbon Emissions</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">API</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/hurricanes">Atlantic Storm Events</a>
+              <a class="dropdown-item" href="/oceans">Ocean Temps</a>
+              <a class="dropdown-item" href="/carbon">Carbon Emissions</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/api">API</a>
           </div>
         </li>
         <!-- <li class="nav-item">
@@ -54,9 +53,7 @@
     </div>
 
     <h2>Storm Events Over Time</h2>
-    <br>
-    <div id="windrace"></div>
-    <br>
+    <div id="bar"></div>
     <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
 
     <!-- <h2>Carbon in the Atmosphere</h2>    
@@ -69,7 +66,7 @@
     <h2>Hurricane Landfall</h2>
     <div class="chart-container" style="position: relative; height:40vh; width:97vw">   
     <canvas id="myChart"></canvas>
-    </div> -->
+    </div> 
     <!-- <canvas style="width: 512px; height: 256px"></canvas> -->
     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
       elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
@@ -77,7 +74,7 @@
       Mauris enim justo, vestibulum ut luctus sit amet, egestas a nisl. Praesent nulla nisi, mattis quis tempus ut, rhoncus eu lectus. Aliquam sollicitudin id tellus sit amet sagittis. 
       Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p> -->
 
-    <!-- </div>       --> 
+    <!-- </div>       --> -->
 
     <div class="row">
       <div class="col-md-12">
@@ -103,12 +100,10 @@
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/series-label.js"></script>
   <script src="https://code.highcharts.com/modules/exporting.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/larsac07/Motion-Highcharts-Plugin/motion.js"></script>
   <script src="https://code.highcharts.com/modules/export-data.js"></script>
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-  <script src="../static/js/motionHurricane.js"></script>
-  <script type="text/javascript" src="../static/js/hurricanes.js"></script>
-
+  <script type="text/javascript" src="../static/js/plot.js"></script>
+  <script src="../static/js/motion.js"></script>
 </body>
 
 </html>
