updating for landfall map

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -50,7 +50,7 @@
       </nav>
     <div class="jumbotron text-center">
       <h1>Evolution of Storms over Time</h1>
-    </div
+    </div>
 
 <figure class="highcharts-figure">
   <div id="container"></div>
