--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,22 +22,73 @@
 }
 
 .jumbotron-image {
-    background-position: center center;
+    background-position: center upper;
     background-repeat: no-repeat;
     background-size: cover;
   }
 
-body {background-color:#181A1B;}
-h2 {font-family: Arial, Helvetica, sans-serif;
+body {
+    background-color:#181A1B;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
     color: #D1CDC7;
 }
-h3 {font-family: Arial, Helvetica, sans-serif;
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
     color: #D1CDC7;
 }
-p {font-family: Arial, Helvetica, sans-serif;
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
     color: #D1CDC7;
 }
 
 a {
     color: #D1CDC7;  
 }
+
+body {
+    padding: 0;
+    margin: 0;
+  }
+  
+#map,
+    html, body {
+    height: 100%;
+    margin: 0;
+}
+#map {
+    width: 100%;
+    height: 500px;
+}
+
+
+.legend {
+    line-height: 25px;
+    color: #555;
+    width: 125px;
+    height: 340px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid black;
+    opacity: .8;
+}
+
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 2px;
+    opacity: 0.7;
+    margin-top: 2px;
+}
+
+.leaflet-popup-content, h3, p {
+    color:  black;
+    
+
+  }
