updates to project

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -42,7 +42,7 @@
       </nav>
     
     <div class="jumbotron text-center">
-      <h1>Evolution of Storms over Time</h1>
+      <h1><Strong>Evolution of Atlantic Storms over Time</Strong></h1>
     </div>
     <div class="row">
       <div class="col-md-12">
