updating style.css and html to fix font color

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -42,7 +42,7 @@
       </nav>
     
     <div class="jumbotron text-center">
-      <h1><Strong>Evolution of Atlantic Storms over Time</Strong></h1>
+      <h1>Evolution of Atlantic Storms over Time</h1>
     </div>
     <div class="row">
       <div class="col-md-12">
@@ -51,15 +51,15 @@
         <div id="map"></div>
       </div>
     </div>  
-    <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
+    <p id="first">Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
 
     <div class="row">
       <div class="col-md-12">
-        <p>Citations:</p>
-        <p>
+        <p id="first">Citations:</p>
+        <p id="first">
           photo credit: https://www.nasa.gov/multimedia/imagegallery/image_feature_87.html
         </p>
-        <p>
+        <p id="first">
           We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
 
           We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
