--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,9 +17,9 @@
     color: #181A1B;
     background: url(../images/hurricaneIsabel.jpg) fixed center no-repeat;
     background-size: cover;
-    /* padding-top: 15%;
+    /* padding-top: 3%;
     padding-bottom: 15%; */
-    height: 20px
+    height: 40px
 }
 
 .jumbotron-image {
@@ -42,16 +42,20 @@ h3 {
     color: #D1CDC7;
 }
 
-p {
+/* p {
     font-family: Arial, Helvetica, sans-serif;
-    color: #D1CDC7;
-}
+    color: #D1CDC7; */
+/* } */
 
 a {
     color: #D1CDC7;  
 }
 
+#first { 
+    font-family: Arial, Helvetica, sans-serif;
+    color: #D1CDC7;
 
+}
 body {
     padding: 0;
     margin: 0;
