updating the rest of the htmls for font style

--- a/Templates/Carbon.html
+++ b/Templates/Carbon.html
@@ -39,9 +39,8 @@
     <div class="jumbotron text-center">
       <h1>Carbon Emissions</h1>
     </div>
-    <!-- <h3>Carbon in the Atmosphere</h3>     -->
     <div id="myChart"></div>
-    <p>The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
+    <p id= "first">The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
       measurements of CO2 in the atmosphere. They were started by C. David Keeling of the Scripps Institution of Oceanography in March of 1958 at a facility of the National 
       Oceanic and Atmospheric Administration [Keeling, 1976]. NOAA started its own CO2 measurements in May of 1974, and they have run in parallel with those made by Scripps 
       since then [Thoning, 1989]. https://www.esrl.noaa.gov/gmd/ccgg/trends/
@@ -49,8 +48,8 @@
 
     <div class="row">
       <div class="col-md-12">
-        <p>Citations:</p>
-        <p>
+        <p id="first">Citations:</p>
+        <p id="first">
           The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
           measurements of CO2 in the atmosphere. They were started by C. David Keeling of the Scripps Institution of Oceanography in March of 1958 at a facility of the National 
           Oceanic and Atmospheric Administration [Keeling, 1976]. NOAA started its own CO2 measurements in May of 1974, and they have run in parallel with those made by Scripps 
