--- a/Templates/hurricanes.html
+++ b/Templates/hurricanes.html
@@ -38,14 +38,7 @@
               <a class="dropdown-item" href="/api">API</a>
           </div>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
+
       </div>
       </nav>
     <div class="jumbotron text-center">
@@ -56,32 +49,12 @@
     <br>
     <div id="windrace"></div>
     <br>
-    <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
-
-    <!-- <h2>Carbon in the Atmosphere</h2>    
-    <div id="scatter"></div>
-    <p>The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
-      measurements of CO2 in the atmosphere. They were started by C. David Keeling of the Scripps Institution of Oceanography in March of 1958 at a facility of the National 
-      Oceanic and Atmospheric Administration [Keeling, 1976]. NOAA started its own CO2 measurements in May of 1974, and they have run in parallel with those made by Scripps 
-      since then [Thoning, 1989]. https://www.esrl.noaa.gov/gmd/ccgg/trends/</p>
-    
-    <h2>Hurricane Landfall</h2>
-    <div class="chart-container" style="position: relative; height:40vh; width:97vw">   
-    <canvas id="myChart"></canvas>
-    </div> -->
-    <!-- <canvas style="width: 512px; height: 256px"></canvas> -->
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
-      elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
-      Donec felis elit, mollis non enim id, tempus iaculis justo. In a euismod sapien. Nam pellentesque ex et ligula pharetra elementum. Donec pulvinar id nibh non pretium. 
-      Mauris enim justo, vestibulum ut luctus sit amet, egestas a nisl. Praesent nulla nisi, mattis quis tempus ut, rhoncus eu lectus. Aliquam sollicitudin id tellus sit amet sagittis. 
-      Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p> -->
-
-    <!-- </div>       --> 
+    <p id="first">Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
 
     <div class="row">
       <div class="col-md-12">
-        <p>citations</p>
-        <p>
+        <p id="first">citations</p>
+        <p id="first">
           We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
 
           We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
