--- a/Templates/oceanTemps.html
+++ b/Templates/oceanTemps.html
@@ -40,12 +40,12 @@
       <h1>Ocean Temps</h1>
     </div>
     <div id="bar"></div>
-    <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
+    <p id="first">Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
 
     <div class="row">
       <div class="col-md-12">
-        <p>citations</p>
-        <p>
+        <p id="first">citations</p>
+        <p id="first">
           We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
 
           We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
