--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,7 +93,7 @@ body {
     margin-top: 2px;
 }
 
-.leaflet-popup-content {
+.leaflet-popup-content .leaflet-popup-content, h3, p{
         color:  black;
     
 
