--- a/Templates/index.html
+++ b/Templates/index.html
@@ -51,22 +51,13 @@
         <div id="map"></div>
       </div>
     </div>  
-    <p id="first">Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
+    <p id="first">This map shows all storm event landfalls since 1851.  The size of the circle is representative of the wind speed at landfall, and the color indicates the decade the event took place.  Each event circle can be clicked on to show additional data, such as the storm name, the date of landfall, the wind speed at landfall, the time of landfall, and the status of the storm (TS = Tropical Storm, EX = Extratropical Cyclone, HU = Hurricane, SD = Subtropical Depression (winds < 34t) , SS = Subtropical Storm (winds > 34kt), TD = Tropical Depression).  The map can also be dragged and zoomed.</p>
 
     <div class="row">
       <div class="col-md-12">
         <p id="first">Citations:</p>
         <p id="first">
           photo credit: https://www.nasa.gov/multimedia/imagegallery/image_feature_87.html
-        </p>
-        <p id="first">
-          We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
-
-          We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
-
-          That's what makes life fun. That you can make these decisions. That you can create the world that you want. Here's another little happy bush Let's make a happy little mountain now. But they're very easily killed. Clouds are delicate.
-
-          We'll take a little bit of Van Dyke Brown. This is unplanned it really just happens. There's not a thing in the world wrong with washing your brush.		
         </p>
       </div>
   </div>
