--- a/Templates/hurricanes.html
+++ b/Templates/hurricanes.html
@@ -56,40 +56,18 @@
     <br>
     <div id="windrace"></div>
     <br>
-    <p>Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
-
-    <!-- <h2>Carbon in the Atmosphere</h2>    
-    <div id="scatter"></div>
-    <p>The graphs show monthly mean carbon dioxide measured at Mauna Loa Observatory, Hawaii. The carbon dioxide data on Mauna Loa constitute the longest record of direct 
-      measurements of CO2 in the atmosphere. They were started by C. David Keeling of the Scripps Institution of Oceanography in March of 1958 at a facility of the National 
-      Oceanic and Atmospheric Administration [Keeling, 1976]. NOAA started its own CO2 measurements in May of 1974, and they have run in parallel with those made by Scripps 
-      since then [Thoning, 1989]. https://www.esrl.noaa.gov/gmd/ccgg/trends/</p>
-    
-    <h2>Hurricane Landfall</h2>
-    <div class="chart-container" style="position: relative; height:40vh; width:97vw">   
-    <canvas id="myChart"></canvas>
-    </div> -->
-    <!-- <canvas style="width: 512px; height: 256px"></canvas> -->
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sodales ex orci, eget laoreet libero tempor vel. Vestibulum et augue sodales, 
-      elementum ante aliquam, sodales nibh. Nullam efficitur felis non lacus molestie, ac tristique nulla finibus. Vivamus fermentum nisl in lobortis commodo. 
-      Donec felis elit, mollis non enim id, tempus iaculis justo. In a euismod sapien. Nam pellentesque ex et ligula pharetra elementum. Donec pulvinar id nibh non pretium. 
-      Mauris enim justo, vestibulum ut luctus sit amet, egestas a nisl. Praesent nulla nisi, mattis quis tempus ut, rhoncus eu lectus. Aliquam sollicitudin id tellus sit amet sagittis. 
-      Curabitur consectetur massa eros, at vestibulum lacus ultrices sed.</p> -->
-
-    <!-- </div>       --> 
+    <p>Data from 1851 through 2015 was used to determine if there was an increase in the number of storms in the Atlantic Ocean over time as well as what types of storms were occurring to 
+      see if any trends appeared.</p>
+    <p>Looking at the chart, there does appear to be an increase in storms in general, and more damaging storms seem to be increasing as well. It's a little deceiving for the last plot point, however,  
+      since it only encompasses six years of data instead of a full decade. Tropical depression level storms seemed to spike in the second half of the 20th Century. But as those started to 
+      decline, other storm types seem to increase. So it may be that just more tropical depressions turned into more intense storms than in the past. Tropical storms, having some peaks and valleys,
+      appear to still be increasing over time. Even though the various categories of hurricanes have appeared throughout the timeline, the last two decades seem to have a higher combination of the more 
+      intense storms than previous decades.
+    </p>
+    <p>It has also been suggested that the intensity of a storm has increased at a faster pace, or time interval, than in the past. That would be a good next topic for analysis.</p>
 
     <div class="row">
       <div class="col-md-12">
-        <p>citations</p>
-        <p>
-          We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
-
-          We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
-
-          That's what makes life fun. That you can make these decisions. That you can create the world that you want. Here's another little happy bush Let's make a happy little mountain now. But they're very easily killed. Clouds are delicate.
-
-          We'll take a little bit of Van Dyke Brown. This is unplanned it really just happens. There's not a thing in the world wrong with washing your brush.		
-        </p>
       </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
