adding updated versions of the html pages

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -42,7 +42,7 @@
       </nav>
     
     <div class="jumbotron text-center">
-      <h1>Evolution of Atlantic Storms over Time</h1>
+      <h1>Evolution of Atlantic Storms Over Time</h1>
     </div>
     <div class="row">
       <div class="col-md-12">
@@ -51,14 +51,14 @@
         <div id="map"></div>
       </div>
     </div>  
-    <p id="first">This map shows all storm event landfalls since 1851.  The size of the circle is representative of the wind speed at landfall, and the color indicates the decade the event took place.  Each event circle can be clicked on to show additional data, such as the storm name, the date of landfall, the wind speed at landfall, the time of landfall, and the status of the storm (TS = Tropical Storm, EX = Extratropical Cyclone, HU = Hurricane, SD = Subtropical Depression (winds < 34t) , SS = Subtropical Storm (winds > 34kt), TD = Tropical Depression).  The map can also be dragged and zoomed.</p>
+    <p id="first">This map shows all storm event landfalls since 1851.  The size of the circle is representative of the wind speed at landfall, and the color indicates the decade the event took place.  Each event circle can be clicked on to show additional data, such as the storm name, the date of landfall, the wind speed at landfall, the time of landfall, and the status of the storm (TS = Tropical Storm, EX = Extratropical Cyclone, HU = Hurricane, SD = Subtropical Depression (winds < 34kt) , SS = Subtropical Storm (winds > 34kt), TD = Tropical Depression).  The map can also be dragged and zoomed.</p>
 
     <div class="row">
       <div class="col-md-12">
         <p id="first">Citations:</p>
-        <p id="first">
-          photo credit: https://www.nasa.gov/multimedia/imagegallery/image_feature_87.html
-        </p>
+        <p id="first">photo credit: https://www.nasa.gov/multimedia/imagegallery/image_feature_87.html</p>
+        <p>https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2012GL051106#support-information-section</p>
+        <p>https://yaleclimateconnections.org/2016/08/warmer-oceans-stronger-hurricanes/#:~:text=As%20oceans%20warm%20up%2C%20hurricanes%20will%20grow%20more%20severe.&text=Hurricanes%20gain%20and%20lose%20wind,of%20the%20ocean%20water%20below.&text=A%20one%20degree%20Fahrenheit%20rise,the%20next%20category%20of%20severity</p>
       </div>
   </div>
 
