--- a/Templates/oceanTemps.html
+++ b/Templates/oceanTemps.html
@@ -40,19 +40,15 @@
       <h1>Ocean Temps</h1>
     </div>
     <div id="bar"></div>
-    <p id="first">Just make little strokes like that. A happy cloud. Think about a cloud. Just float around and be there. Fluff that up. Don't be bashful drop me a line.</p>
+    <p id="first">The graph shows the change in the average global sea surface temperature. Surface temperature measures the upper few meters of the ocean, but a recent study published in the journal Geophysical Research Letters shows the deep ocean is also affected.
+      The ocean absorbs heat and is most likely increasing due to an increase in greenhouse gases in the atmosphere and one third of the excess heat is absorbed 700 m below the sea surface.
+      Over the last 100 years the temperature has been increasing by about .13 degree Celsius.
+      A hurricane’s wind speed changes based on the temperature of the water below. Less than one degree Celsius can increase a hurricane’s windspeed by 15 to 20 miles per hour which can shift a storm into a higher category of severity.</p>
 
     <div class="row">
       <div class="col-md-12">
-        <p id="first">citations</p>
         <p id="first">
-          We don't make mistakes we just have happy little accidents. Don't be bashful drop me a line. Just let this happen. We just let this flow right out of our minds. Let's put some happy trees and bushes back in here. Brown is such a nice color.
 
-          We don't really know where this goes - and I'm not sure we really care. The light is your friend. Preserve it. Let's have a little bit of fun today.
-
-          That's what makes life fun. That you can make these decisions. That you can create the world that you want. Here's another little happy bush Let's make a happy little mountain now. But they're very easily killed. Clouds are delicate.
-
-          We'll take a little bit of Van Dyke Brown. This is unplanned it really just happens. There's not a thing in the world wrong with washing your brush.		
         </p>
       </div>
   </div>
